# BlueMarble

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  DirectoryWatcher.cpp  DirectoryWatcher.h  Setup.ps1  ShaderManager.cpp  ShaderManager.h  main.cpp
shaders/: Instanced.frag  Instanced_frag.glsl  instanced.vert  instanced_vert.glsl  lines.vert  lines_frag.glsl  triangle.frag  triangle.vert  triangle_frag.glsl  triangle_vert.glsl
